# market_price_guard

./: .gitignore  README.md  outputs_uat_summary.md  pyproject.toml  requirements_local_freeze.txt
config/: manual_prices.yaml  mock_prices.yaml  provider_capabilities.yaml  stale_rules.yaml  symbol_registry.yaml  watchlist.yaml
docs/: ACCOUNT_ARCHITECTURE.md  HANDOFF_v0.7.3.1.md  HANDOFF_v0.7.3.2.md  HANDOFF_v0.7.3.3.md  HANDOFF_v0.7.4.1.md  HANDOFF_v0.7.4.2.md  HANDOFF_v0.7.4.3.md  HANDOFF_v0.7.4.4.md  HANDOFF_v0.7.4.md  HANDOFF_v0.7.5.1.md  HANDOFF_v0.7.5.2.md  HANDOFF_v0.7.5.3.md  HANDOFF_v0.7.5.4.md  HANDOFF_v0.7.5.md  HANDOFF_v0.8.0.md  HANDOFF_v0.8.1.2.md  HANDOFF_v0.8.1.md  IQUANT_FEASIBILITY_ASSESSMENT.md  OPERATION_DATA_SOURCE_FEASIBILITY_MATRIX.md  OPERATION_PROVIDER_REQUIREMENTS.md  api_field_capability_matrix.md  current_provider_chains.md  known_issues.md  output_contract.md  runtime_modes.md  symbol_registry.md  uat_checklist.md  uat_profiles.md  uat_run_cache.md
outputs_all_conservative/: controller_price_summary.md  data_completeness_report.md  energy_price_block.md  prices_snapshot.csv  provider_health_report.md  runtime_diagnostics.md  tech_price_block.md
outputs_diagnostic/: data_completeness_report.md  energy_price_block.md  prices_snapshot.csv  provider_health_report.md  runtime_diagnostics.md  tech_price_block.md
outputs_energy_fast/: controller_price_summary.md  data_completeness_report.md  energy_price_block.md  prices_snapshot.csv  provider_health_report.md  runtime_diagnostics.md  tech_price_block.md
outputs_energy_latest/: data_completeness_report.md  energy_price_block.md  prices_snapshot.csv  provider_health_report.md  runtime_diagnostics.md
outputs_live/: controller_price_summary.md  data_completeness_report.md  energy_price_block.md  prices_snapshot.csv  (+2 more)
(+172 files in other folders)
