[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-price-guard"
version = "0.1.0"
description = "Price snapshot and freshness guard for investment project coordination."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "akshare>=1.14",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests for models, freshness, reports, and CLI helpers",
    "provider: provider adapter, routing, and provider-cache tests using mocks only",
    "contract: output contract and cross-project interface tests",
    "script: PowerShell script static contract tests",
    "uat: end-to-end UAT-oriented tests or checks",
    "slow: tests that are intentionally slower than the default suite",
    "live: tests that may touch live network data and are excluded from default development runs",
]
